--- a/public/output.css
+++ b/public/output.css
@@ -561,12 +561,32 @@ video {
   width: 100%;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
 
 .max-w-\[20\%\] {
   max-width: 20%;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -621,6 +641,10 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-4 {
