--- a/public/output.css
+++ b/public/output.css
@@ -552,12 +552,100 @@ video {
   height: 4rem;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[150\%\] {
+  height: 150%;
+}
+
+.h-\[32rem\] {
+  height: 32rem;
+}
+
+.h-\[48rem\] {
+  height: 48rem;
+}
+
+.h-\[36rem\] {
+  height: 36rem;
+}
+
+.h-\[42rem\] {
+  height: 42rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.h-1\/4 {
+  height: 25%;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.max-h-\[50\%\] {
+  max-height: 50%;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
 
 .max-w-\[20\%\] {
   max-width: 20%;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-screen-lg {
+  max-width: 1024px;
+}
+
+.max-w-screen-2xl {
+  max-width: 1536px;
+}
+
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
 }
 
 .flex-wrap {
@@ -606,6 +694,21 @@ video {
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -634,6 +737,31 @@ video {
   line-height: 1.75rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -646,6 +774,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:object-scale-down:hover {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 
 .hover\:text-white:hover {
@@ -665,8 +798,25 @@ video {
     display: block;
   }
 
+  .md\:h-96 {
+    height: 24rem;
+  }
+
+  .md\:max-h-screen {
+    max-height: 100vh;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
+  }
+
+  .md\:object-scale-down {
+    -o-object-fit: scale-down;
+       object-fit: scale-down;
   }
 }
 
