--- a/public/output.css
+++ b/public/output.css
@@ -44,7 +44,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, sans-serif;
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -552,66 +552,6 @@ video {
   height: 4rem;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-\[150\%\] {
-  height: 150%;
-}
-
-.h-\[32rem\] {
-  height: 32rem;
-}
-
-.h-\[48rem\] {
-  height: 48rem;
-}
-
-.h-\[36rem\] {
-  height: 36rem;
-}
-
-.h-\[42rem\] {
-  height: 42rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-1\/4 {
-  height: 25%;
-}
-
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.max-h-\[50\%\] {
-  max-height: 50%;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -622,30 +562,6 @@ video {
 
 .max-w-\[20\%\] {
   max-width: 20%;
-}
-
-.max-w-md {
-  max-width: 28rem;
-}
-
-.max-w-lg {
-  max-width: 32rem;
-}
-
-.max-w-screen-lg {
-  max-width: 1024px;
-}
-
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
 }
 
 .flex-wrap {
@@ -699,16 +615,6 @@ video {
      object-fit: contain;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-}
-
 .p-10 {
   padding: 2.5rem;
 }
@@ -727,6 +633,11 @@ video {
   text-align: center;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -735,31 +646,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -774,11 +660,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:object-scale-down:hover {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .hover\:text-white:hover {
@@ -798,20 +679,8 @@ video {
     display: block;
   }
 
-  .md\:h-96 {
-    height: 24rem;
-  }
-
-  .md\:max-h-screen {
-    max-height: 100vh;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
   }
 
   .md\:object-scale-down {
