--- a/public/output.css
+++ b/public/output.css
@@ -547,6 +547,11 @@ video {
   margin-right: auto;
 }
 
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -563,12 +568,48 @@ video {
   height: 100%;
 }
 
+.h-\[150\%\] {
+  height: 150%;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[150\%\] {
+  width: 150%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .max-w-7xl {
@@ -581,6 +622,22 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.flex-initial {
+  flex: 0 1 auto;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
 }
 
 .flex-wrap {
@@ -634,14 +691,36 @@ video {
   background-color: rgb(228 63 90 / var(--tw-bg-opacity));
 }
 
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-96 {
+  padding: 24rem;
+}
+
+.p-40 {
+  padding: 10rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
