--- a/public/output.css
+++ b/public/output.css
@@ -596,6 +596,10 @@ video {
   height: 12rem;
 }
 
+.h-\[80\%\] {
+  height: 80%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -614,6 +618,14 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .max-w-7xl {
@@ -752,6 +764,30 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-\[150px\] {
+  padding-left: 150px;
+}
+
+.pt-\[200px\] {
+  padding-top: 200px;
+}
+
+.pt-\[180px\] {
+  padding-top: 180px;
+}
+
+.pt-\[150px\] {
+  padding-top: 150px;
+}
+
+.pt-\[250px\] {
+  padding-top: 250px;
 }
 
 .text-center {
