--- a/public/output.css
+++ b/public/output.css
@@ -771,6 +771,16 @@ video {
   padding-bottom: 100px;
 }
 
+.py-\[59px\] {
+  padding-top: 59px;
+  padding-bottom: 59px;
+}
+
+.py-\[65px\] {
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -797,6 +807,26 @@ video {
 
 .pt-\[190px\] {
   padding-top: 190px;
+}
+
+.pt-\[220px\] {
+  padding-top: 220px;
+}
+
+.pt-\[240px\] {
+  padding-top: 240px;
+}
+
+.pt-\[210px\] {
+  padding-top: 210px;
+}
+
+.pt-\[185px\] {
+  padding-top: 185px;
+}
+
+.pt-\[170px\] {
+  padding-top: 170px;
 }
 
 .text-center {
