--- a/public/output.css
+++ b/public/output.css
@@ -628,6 +628,22 @@ video {
   width: 66.666667%;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
